# ensemble

./: .gitignore  CLAUDE.md  Makefile  README.md  go.mod  go.sum  main.go
api/pb/: ensemble.pb.go  ensemble_grpc.pb.go
api/proto/: ensemble.proto
clients/python/: README.md  pyproject.toml
clients/python/ensemble/: __init__.py  auth.py  client.py  errors.py  events.py
clients/python/ensemble/_proto/: ensemble_pb2.py  ensemble_pb2_grpc.py
clients/python/examples/: echo.py
clients/python/tests/: test_auth.py  test_client.py
deployment/: .dockerignore  Dockerfile  deploy.sh
docs/plan/: 00-overview.md  01-foundation.md  02-tor.md  03-discovery-signaling.md  04-direct-connection.md  05-chat.md  06-file-transfer.md  07-hardening.md  CHECKLIST.md
internal/api/: auth.go  auth_test.go  events.go  registerservice.go  registerservice_test.go  server.go  server_test.go
internal/chat/: history.go  history_test.go  service.go  service_test.go
internal/contacts/: contact.go  store.go  store_test.go
internal/daemon/: config.go  daemon.go  daemon_test.go  mux_test.go  service_gate.go  service_gate_test.go
internal/discovery/: dht.go  dht_test.go  manager.go  manager_test.go  mdns.go  mdns_test.go  routing.go  routing_test.go
internal/filetransfer/: chunker.go  chunker_test.go  merkle.go  merkle_test.go  progress.go  progress_test.go  receiver.go  sender.go  transfer_test.go
internal/identity/: address.go  address_test.go  keypair.go  keypair_test.go  keystore.go  keystore_test.go  (+2 more)
testutil/: fixtures.go  fixtures_test.go  testhost.go  testhost_test.go
(+64 files in other folders)
